--- a/View/assets/css/style.css
+++ b/View/assets/css/style.css
@@ -12870,5 +12870,13 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   text-transform: capitalize;
   color: #ffffff;
 }
+#nut {
+  background-color: black;
+  color: white;
+  width: 200px;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+}
 
 /*# sourceMappingURL=style.css.map */
